test/zinc_source/compile_errors/functions/27_ufcs_real_field_not_rewritten.zn
// expected-error: member 'run' is not callable

struct Tool {
    run: 1
}

fn run(tool) {
    return 99
}

fn main() {
    tool = Tool {}
    print(tool.run())
}
